fixed page overflow issues

--- a/server/nginx/html/css/style.css
+++ b/server/nginx/html/css/style.css
@@ -35,7 +35,7 @@ html, body {
 }
 
 html, body, main, x-page {
-    min-height: 100vh;
+    height: 100vh;
 }
 
 header x-input  {
